Reformat and Inject some Files